--- a/www/apply.html
+++ b/www/apply.html
@@ -232,7 +232,11 @@
                   <label class="control-label" for="studentInteresting">Tell us something fun or interesting about yourself!</label>
                   <textarea type="comment" class="form-control" id="studentInteresting" name="studentInteresting" rows="5" required></textarea>
                 </div>
+                <div class="form-group col-md-12">
+                  <div class="g-recaptcha col col-md-12 text-center" data-sitekey="6LdtS-EUAAAAAHTMdmwuey2f2ZHLs2-VCAfij5pA"></div>
+                </div>
                 <div class="col-md-12">
+                  <br />
                   <button class="btn btn-dark btn-medium uppercase" style="background-color: #a9cd2e;" type="submit">
                   <i class="fa fa-paper-plane"></i>
                    Submit Information
@@ -335,6 +339,8 @@
     <!-- end section --><!--end wrapper boxed-->
 
 <!-- Scripts -->
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
 <script src="js/jquery/jquery.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="js/style-customizer/js/spectrum.js"></script>
