--- a/www/mentor.html
+++ b/www/mentor.html
@@ -386,6 +386,8 @@ placeholder="Tell us about yourself! (career/education/skills, mentoring experie
 
 <div class="row">
 <br/>
+<div class="g-recaptcha col col-md-12 text-center" data-sitekey="6LdtS-EUAAAAAHTMdmwuey2f2ZHLs2-VCAfij5pA"></div>
+      <br/>
 <div class="col col-md-12 text-center">
   <button class="btn btn-dark btn-medium uppercase" type="submit">
   <i class="fa fa-paper-plane"></i> Submit Information
@@ -470,6 +472,8 @@ placeholder="Tell us about yourself! (career/education/skills, mentoring experie
     <!-- end section --><!--end wrapper boxed-->
 
 <!-- Scripts -->
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
 <script src="js/jquery/jquery.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="js/style-customizer/js/spectrum.js"></script>
