--- a/www/sponsor.html
+++ b/www/sponsor.html
@@ -423,15 +423,19 @@
 <!-- end row -->
 
   <div class="row">
-<div class="col-md-12">
-<label class="label-text" for="mymessage">Message</label>
-<textarea id="mymessage" name="mymessage" class="textaria-1" placeholder="How are you interested in sponsoring?"></textarea>
-</div>
+      <div class="col-md-12">
+      <label class="label-text" for="mymessage">Message</label>
+      <textarea id="mymessage" name="mymessage" class="textaria-1" placeholder="How are you interested in sponsoring?"></textarea>
+      </div>
   </div>
 <!-- end row -->
+  <div class="row">
+  <br/>
+    <div class="g-recaptcha col col-md-12 text-center" data-sitekey="6LdtS-EUAAAAAHTMdmwuey2f2ZHLs2-VCAfij5pA"></div>
+  </div>
 
-    <div class="row">
-    <br/>
+<div class="row">
+          <br/>
 <div class="col-md-12 text-center">
 <button class="btn btn-dark btn-medium uppercase" type="submit">
 <i class="fa fa-paper-plane"></i>
@@ -515,6 +519,8 @@
     <!-- end section --><!--end wrapper boxed-->
 
 <!-- Scripts -->
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
 <script src="js/jquery/jquery.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="js/style-customizer/js/spectrum.js"></script>
