--- a/www/index.html
+++ b/www/index.html
@@ -318,7 +318,7 @@
               <div class="ce-feature-box-44 margin-bottom">
                 <div class="icon-plain-small center dark icon"><i class="fas fa-wrench"></i></div>
                 <br/>
-                <h2 class="font-weight-6 less-mar-1 title">8</h2>
+                <h2 class="font-weight-6 less-mar-1 title">10</h2>
                 <h6 class="subtext">Robots Completed</h6>
               </div>
             </div>
@@ -348,7 +348,7 @@
               <div class="ce-feature-box-44 margin-bottom">
                 <div class="icon-plain-small center dark icon"><i class="fas fa-cogs"></i></div>
                 <br/>
-                <h2 class="font-weight-6 less-mar-1 title">1629</h2>
+                <h2 class="font-weight-6 less-mar-1 title"><i class='fas fa-infinity'></i></h2>
                 <h6 class="subtext">Careers</h6>
               </div>
             </div>
