Test editing website

--- a/www/index.html
+++ b/www/index.html
@@ -1,9 +1,10 @@
+<!-- Main Page -->
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>MetalCow Robotics - FRC Team 4213 </title>
+<title>Metalcow Robotics - FRC Team 4213 </title>
 <meta name="keywords" content="" />
 <meta name="description" content="">
 <meta name="author" content="">
