--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Jake is a cool website developer  - FRC Team 4213 </title>
+<title> MetalCow Robotics - FRC Team 4213 </title>
 <meta name="keywords" content="" />
 <meta name="description" content="">
 <meta name="author" content="">
@@ -155,7 +155,7 @@
 			data-splitin="none"
 			data-splitout="none"
 			data-responsive_offset="on"
-			style="z-index: 7; white-space: nowrap;">MetalCow </div>
+			style="z-index: 7; white-space: nowrap;">Jake is a cool website developer </div>
 
                 <!-- LAYER NR. 3 -->
                 <div class="tp-caption montserrat fweight-6 text-white tp-resizeme"
