Reverting test changes

--- a/www/index.html
+++ b/www/index.html
@@ -155,7 +155,7 @@
 			data-splitin="none"
 			data-splitout="none"
 			data-responsive_offset="on"
-			style="z-index: 7; white-space: nowrap;">Jake is a cool website developer </div>
+			style="z-index: 7; white-space: nowrap;">MetalCow </div>
 
                 <!-- LAYER NR. 3 -->
                 <div class="tp-caption montserrat fweight-6 text-white tp-resizeme"
