--- a/www/mentor.html
+++ b/www/mentor.html
@@ -461,6 +461,7 @@ placeholder="Tell us about yourself! (career/education/skills, mentoring experie
                 <img src="/images/mcr/sponsors/mdg_McLeanCountyHomeEducation.png" alt="McLean County Home Education">
 
                 <img src="/images/mcr/sponsors/mdg_SCADAware.png" alt="SCADAware">
+                <img src="/images/mcr/sponsors/mdg_G3.png" alt="G3">
 
                 <img src="/images/mcr/sponsors/mdg_4H.png" alt="4-H">
                 <img src="/images/mcr/sponsors/mdg_First.png" alt="FIRST Robotics">
