--- a/www/mentor.html
+++ b/www/mentor.html
@@ -462,7 +462,7 @@ placeholder="Tell us about yourself! (career/education/skills, mentoring experie
 
                 <img src="/images/mcr/sponsors/mdg_SCADAware.png" alt="SCADAware">
                 <img src="/images/mcr/sponsors/mdg_G3.png" alt="G3">
-
+                <img src="/images/mcr/sponsors/mdg_StateFarmFoundation.png" alt="State Farm Foundation">
                 <img src="/images/mcr/sponsors/mdg_Wilber.png" alt="Wilber">
 
                 <img src="/images/mcr/sponsors/mdg_4H.png" alt="4-H">
