--- a/www/join.html
+++ b/www/join.html
@@ -421,6 +421,11 @@
                 <img src="/images/mcr/sponsors/mdg_Milwaukee.png" alt="Milwaukee Tools">
                 <img src="/images/mcr/sponsors/mdg_McLeanCountyHomeEducation.png" alt="McLean County Home Education">
 
+                <img src="/images/mcr/sponsors/mdg_SCADAware.png" alt="SCADAware">
+                <img src="/images/mcr/sponsors/mdg_G3.png" alt="G3">
+                <img src="/images/mcr/sponsors/mdg_StateFarmFoundation.png" alt="State Farm Foundation">
+                <img src="/images/mcr/sponsors/mdg_Wilber.png" alt="Wilber">
+
                 <img src="/images/mcr/sponsors/mdg_4H.png" alt="4-H">
                 <img src="/images/mcr/sponsors/mdg_First.png" alt="FIRST Robotics">
 
