Added friends of metalcow Sponsor to the footer

--- a/www/index.html
+++ b/www/index.html
@@ -442,6 +442,7 @@
                 <img src="/images/mcr/sponsors/mdg_Wilber.png" alt="Wilber">
 
                 <img src="/images/mcr/sponsors/mdg_Onshape.png" alt="Onshape">
+                <img src="/images/mcr/sponsors/mdg_FriendsOfMetalCow.png" alt="Friends of MetalCow">
 
                 <img src="/images/mcr/sponsors/mdg_4H.png" alt="4-H">
                 <img src="/images/mcr/sponsors/mdg_First.png" alt="FIRST Robotics">
