--- a/www/mentor.html
+++ b/www/mentor.html
@@ -466,7 +466,7 @@ placeholder="Tell us about yourself! (career/education/skills, mentoring experie
                 <img src="/images/mcr/sponsors/mdg_Wilber.png" alt="Wilber">
 
                 <img src="/images/mcr/sponsors/mdg_Onshape.png" alt="Onshape">
-
+                <img src="/images/mcr/sponsors/mdg_FriendsOfMetalCow.png" alt="Friends of MetalCow">
 
                 <img src="/images/mcr/sponsors/mdg_4H.png" alt="4-H">
                 <img src="/images/mcr/sponsors/mdg_First.png" alt="FIRST Robotics">
