--- a/www/index.html
+++ b/www/index.html
@@ -275,7 +275,8 @@
       <div class="container-fluid">
         <div class="row no-gutter">
           <div class="col-md-7 col-sm-12 col-xs-12 margin-bottom">
-            <img src="/images/mcr/20180407_172014.jpg" alt="" class="img-responsive"/> </div>
+            <!--<img src="/images/mcr/20180407_172014.jpg" alt="" class="img-responsive"/> </div> -->
+            <img src="/images/mcr/peoriaPit(ToBeRecolored).jpg" alt="" class="img-responsive"/> </div>
           <!--end item-->
 
           <div class="col-md-5">
