--- a/www/join.html
+++ b/www/join.html
@@ -205,7 +205,7 @@
   <div class="clearfix"></div>
   <!--end section-->
 
-  <section style="background: url(images/mcr//20161001_105308.jpg) 50% 0 no-repeat fixed;">
+  <section style="background: url(images/mcr//) 50% 0 no-repeat fixed;">
         <div class="container-fluid nopadding">
   	<div class="parallax-overlay bg-opacity-3">
           <div class="container sec-tpadding-4 sec-bpadding-4">
