--- a/www/join.html
+++ b/www/join.html
@@ -63,7 +63,7 @@
 
 
 
-<div class="wrapper-boxed">
+<!--<div class="wrapper-boxed">
   <div class="site-wrapper">
     <div class="col-md-12 nopadding">
       <div class="header-section style1 pin-style">
@@ -78,7 +78,7 @@
                     <li class=""> <a href="https://twitter.com/metalcow4213" title=""><i aria-hidden="true" class="fab fa-twitter-square"></i></a> </li>
                     <li class=""> <a href="https://www.youtube.com/user/TeamMetalCow" title=""><i aria-hidden="true" class="fab fa-youtube"></i></a> </li>
                     <!--<li class=""> <a href="https://www.instagram.com/metalcowrobotics" title=""><i aria-hidden="true" class="fab fa-instagram"></i></a> </li>-->
-                    <li class=""> <a href="https://github.com/MetalCowRobotics" title=""><i aria-hidden="true" class="fab fa-github"></i></a> </li>
+                   <!--<li class=""> <a href="https://github.com/MetalCowRobotics" title=""><i aria-hidden="true" class="fab fa-github"></i></a> </li>
                     <li class=""> <a href="https://metalcowrobotics.com/store" title=""><i aria-hidden="true" class="fa fa-shopping-cart"></i></a> </li>
 
                     <li class="visible-xs menu-icon">
@@ -103,7 +103,7 @@
     </div>
     <!--end menu-->
 
-    <div class="clearfix"></div>
+    <!--<div class="clearfix"></div>
 
     <div class="header-inner-tmargin">
         <section class="section-side-image clearfix">
@@ -127,10 +127,10 @@
     <div class=" clearfix"></div>
     <!--end section-->
     </div>
-    <div class="clearfix"></div>
+    <!--<div class="clearfix"></div>
     <!--end header inner-->
 
-      <section class="sec-padding">
+      <!--<section class="sec-padding">
       <div class="container">
         <div class="row">
           <div class="col col-md-5"> <br/>
@@ -148,28 +148,28 @@
                 <div class="text">Learn business skills and leadership expertise</div>
               </div>
               <!--end item-->
-              <div class="iconlist-2">
+              <!--<div class="iconlist-2">
                 <div class="icon dark"><i class="fa fa-arrow-circle-right text-primary"></i></div>
                 <div class="text">Build an 120lb competition robot</div>
               </div>
               <!--end item-->
-              <div class="iconlist-2">
+              <!--<div class="iconlist-2">
                 <div class="icon dark"><i class="fa fa-arrow-circle-right text-primary"></i></div>
                 <div class="text">Be mentored by industry professionals</div>
               </div>
               <!--end item-->
 
-              <div class="iconlist-2">
+              <!--<div class="iconlist-2">
                 <div class="icon dark"><i class="fa fa-arrow-circle-right text-primary"></i></div>
                 <div class="text">Develop a resume of career-ready skills</div>
               </div>
               <!--end item-->
 
-            <div class="clearfix"></div>
+            <!--<div class="clearfix"></div>
           </div>
           <!--end item-->
 
-          <div class="col col-md-7 padding-left-4">
+          <!--<div class="col col-md-7 padding-left-4">
             <div class="video-holder [vimeo, widescreen]">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/-2yIfSv_Trs?rel=0&amp;showinfo=0"
                 frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -186,11 +186,11 @@
 
         </div>
       </div>
-    </section>
+    <!--</section>
     <div class="clearfix"></div>
     <!-- end section -->
 
-    <section class="sec-padding-2 section-primary">
+    <!--<section class="sec-padding-2 section-primary">
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
@@ -205,7 +205,7 @@
   <div class="clearfix"></div>
   <!--end section-->
 
-  <section style="background: url(images/mcr//) 50% 0 no-repeat fixed;">
+  <section style="background: url(images/mcr///20161001_105308.jpg) 50% 0 no-repeat fixed;">
         <div class="container-fluid nopadding">
   	<div class="parallax-overlay bg-opacity-3">
           <div class="container sec-tpadding-4 sec-bpadding-4">
@@ -226,7 +226,7 @@
 
 
 
-    <div class="parallax vertical-align" data-parallax-bg-image="images/mcr/ryoji-iwata-486409-unsplash.jpg" data-parallax-speed="0.9" data-parallax-direction="down">
+    <!--<div class="parallax vertical-align" data-parallax-bg-image="images/mcr/ryoji-iwata-486409-unsplash.jpg" data-parallax-speed="0.9" data-parallax-direction="down">
       <div class="parallax-overlay bg-opacity-9">
         <div class="container sec-tpadding-2 sec-bpadding-2">
           <div class="row">
@@ -242,7 +242,7 @@
             <div class="clearfix"></div>
             <!--end title-->
 
-            <div class="col col-md-4">
+            <!--<div class="col col-md-4">
               <div class="ce-feature-box-6 text-left margin-bottom">
                 <div class="img-box">
                   <img src="images/mcr/IMG_0103.jpg" alt="" class="img-responsive"/> </div>
@@ -258,7 +258,7 @@
             </div>
             <!--end item-->
 
-            <div class="col col-md-4">
+            <!--<div class="col col-md-4">
               <div class="ce-feature-box-6 text-left margin-bottom">
                 <div class="img-box">
                   <img src="images/mcr/IMG_3614.JPG" alt="" class="img-responsive"/> </div>
@@ -274,7 +274,7 @@
             </div>
             <!--end item-->
 
-            <div class="col col-md-4">
+            <!--<div class="col col-md-4">
               <div class="ce-feature-box-6 text-left margin-bottom">
                 <div class="img-box">
                   <img src="images/mcr/20180120_130610.jpg" alt="" class="img-responsive"/> </div>
@@ -294,10 +294,10 @@
         </div>
       </div>
     </div>
-    <div class="clearfix"></div>
+    <!--<div class="clearfix"></div>
     <!-- end section -->
 
-    <section style="background: url(/images/mcr/3dprinter.png) no-repeat fixed; background-color: black; background-size: cover;">
+    <!--<section style="background: url(/images/mcr/3dprinter.png) no-repeat fixed; background-color: black; background-size: cover;">
           <div class="container-fluid nopadding">
     	<div class="parallax-overlay bg-opacity-3">
             <div class="container sec-tpadding-4 sec-bpadding-4">
@@ -316,7 +316,7 @@
         <!--end section-->
 
 
-     <!--<section class="section-primary section-bgimg-10">
+     <!--(5691)<section class="section-primary section-bgimg-10">
        <div class="container-fluid"> </div>
        <div class="container-fluid">
          <div class="row no-gutter">
@@ -366,7 +366,7 @@
 -->
 
 
-    <div class="section-dark sec-padding">
+    <!--<div class="section-dark sec-padding">
       <div class="container">
         <div class="row">
           <div class="col-md-3 col-sm-12 colmargin clearfix margin-bottom">
@@ -378,7 +378,7 @@
           </div>
           <!--end item-->
 
-          <div class="col-md-3 col-xs-12 clearfix margin-bottom">
+          <!--<div class="col-md-3 col-xs-12 clearfix margin-bottom">
             <h4 class="text-white less-mar3 font-weight-5">Contact Us</h4>
             <div class="clearfix"></div>
             <br/>
@@ -402,7 +402,7 @@
           </div>
           <!--end item-->
 
-          <div class="col-md-6 col-xs-12 clearfix margin-bottom small_sponsors">
+          <!--<div class="col-md-6 col-xs-12 clearfix margin-bottom small_sponsors">
             <h4 class="text-white less-mar3 font-weight-5">Sponsored By:</h4>
             <div class="clearfix"></div>
             <br/>
@@ -438,11 +438,11 @@
         </div>
       </div>
     </div>
-    <div class="clearfix"></div>
+    <!--<div class="clearfix"></div>
     <!-- end section --><!--end wrapper boxed-->
 
 <!-- Scripts -->
-<script src="js/jquery/jquery.js"></script>
+<!--<script src="js/jquery/jquery.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="js/style-customizer/js/spectrum.js"></script>
 <script src="js/less/less.min.js" data-env="development"></script>
@@ -453,12 +453,12 @@
 <!-- Scripts END -->
 
 <!-- Template scripts -->
-<script src="js/megamenu/js/main.js"></script>
+<!--<script src="js/megamenu/js/main.js"></script>
 <script src="js/owl-carousel/owl.carousel.js"></script>
 <script src="js/owl-carousel/custom.js"></script>
 <!--<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>-->
 <!--<script type="text/javascript" src="js/gmaps/jquery.gmap.min.js"></script>-->
-<script type="text/javascript" src="js/gmaps/examples.js"></script>
+<!--<script type="text/javascript" src="js/gmaps/examples.js"></script>
 <script type="text/javascript" src="js/smart-forms/jquery.form.min.js"></script>
 <script type="text/javascript" src="js/smart-forms/jquery.validate.min.js"></script>
 <script type="text/javascript" src="js/smart-forms/additional-methods.min.js"></script>
