Updating sponsors  on sponsor page

--- a/www/sponsor.html
+++ b/www/sponsor.html
@@ -214,7 +214,7 @@
        <li><a href="https://www.facebook.com/timelesscloversmcl/"><img src="/images/mcr/sponsors/mdg_TimelessClovers.png"></a></li>
        <li><a href="https://www.bridgestoneamericas.com/en/corporate-social-responsibility/community"><img src="/images/mcr/sponsors/mdg_Bridgestone.png" alt="Bridgestone"></a></li>
        <li><a href="https://www.countryfinancial.com/"><img src="/images/mcr/sponsors/mdg_CountryFinancial.png" alt="Country Financial"></a></li>
-       <li><a href="https://epson.com/focused-giving-program"><img src="/images/mcr/sponsors/mdg_Epson.png" alt="Epson" ></a></li>
+       <li><a href="https://afni.com/about/locations/bloomington-office-mlk-dr"><img src="/images/mcr/sponsors/mdg_Afni.png" alt="Afni" ></a></li>
        <li><a href="https://wilbergroup.com/"><img src="/images/mcr/sponsors/mdg_Wilber.png" alt="Wilbur"></a></li>
        <li><a href="https://g3machining.com/"><img src="/images/mcr/sponsors/mdg_G3.png" alt="G3 Machining"></a></li>
      </ul>
