--- a/www/sponsor.html
+++ b/www/sponsor.html
@@ -203,7 +203,7 @@
 
      <div class="col-md-12">
      <ul class="clients-list border-dark grid-cols-6">
-       <li><a href="https://www.rivian.com/"><img src="/images/mcr/sponsors/mdg_Rivian.png" alt="Rivian"></a></li>
+       <li><a href="https://www.caterpillar.com/en.html"><img src="/images/mcr/sponsors/mdg_Rivian.png" alt="Catapillar"></a></li>
        <li><a href="https://www.fund.bayer.us/"><img src="/images/mcr/sponsors/mdg_Bayer.png" alt="Bayer Fund"></a></li>
        <li><a href="https://slack.com/help/articles/204368833-Slack-for-Nonprofits"><img src="/images/mcr/sponsors/mdg_Slack.png" alt="Slack"></a></li>
        <li><a href="https://www.ameren.com/illinois/company/community"><img src="/images/mcr/sponsors/mdg_Ameren.png" alt="Ameren Illinois" ></a></li>
